# graphite

./: .gitignore  Makefile  README.md  mcp.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/graphite/: __init__.py  config.py  errors.py
backend/graphite/agent/: __init__.py  parser.py  react_agent.py  schemas.py
backend/graphite/agent/llm/: __init__.py  base.py  gemini_provider.py  mock_provider.py
backend/graphite/agent/prompts/: __init__.py  system_prompt.py  templates.py
backend/graphite/analysis/: __init__.py  blast_radius.py  comparison.py  engine.py  path.py  redundancy.py  topology.py
backend/graphite/api/: __init__.py  __main__.py  app.py  deps.py  models.py  state.py
backend/graphite/api/routes/: __init__.py  agent.py  analysis.py  health.py  mcp_http.py  simulation.py  topology.py
backend/graphite/mcp/: __init__.py  __main__.py  mode.py  resources.py  server.py  tools.py
backend/graphite/simulation/: __init__.py  cascading.py  engine.py
backend/graphite/tools/: __init__.py  base.py  registry.py
backend/graphite/twin/: __init__.py  builder.py  graph_wrapper.py  manager.py  validator.py
backend/network_state/: bgp_peers.json  devices.json  endpoint_groups.json  links.json  services.json  telemetry_snapshot.json  user_groups.json  vlans.json
backend/network_state/sites/: bangalore.json  london.json  newyork.json  singapore.json
backend/tests/: conftest.py  test_agent.py  test_analysis.py  test_api.py  test_builder.py  test_graph_wrapper.py  test_mcp_http.py  test_simulation.py  test_tools.py
(+75 files in other folders)
