[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphite-backend"
version = "0.1.0"
description = "Graphite — Intelligent Network Copilot: deterministic digital-twin backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Graphite Team" }]

dependencies = [
    "networkx>=3.2,<4.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "google-generativeai>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
